fix: text overflow in indicators causing horizontal scrollbar

--- a/.dev/src/media/main.css
+++ b/.dev/src/media/main.css
@@ -219,7 +219,7 @@
         @apply flex shrink-0 flex-row-reverse gap-5 max-md:order-2 max-md:shrink-0 md:gap-8;
 
         & span[data-indicator] {
-          @apply size-5 cursor-pointer text-transparent before:absolute before:size-5 before:bg-current before:text-slate-900 before:content-['\00A0'] dark:before:text-slate-100;
+          @apply size-5 cursor-pointer text-[0px] before:absolute before:size-5 before:bg-current before:text-slate-900 before:content-['\00A0'] dark:before:text-slate-100;
           &[data-indicator="poll-status"] {
             &[data-style="active"] {
               @apply before:[mask:url('@assets/icons/refresh.svg')_center/cover_no-repeat];
